--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,7 +1,7 @@
 .app-container {
     height: 98vh;
     width: 100%;
-    background: url('../../../assets/images/backgrounds/shiny_cubes.jpg');
+    background: url('../../../assets/images/backgrounds/maroon-03.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -52,8 +52,8 @@ img {
     height: 100%;
     width: 100%;
     border-radius: 50%;
-    border: 5px solid lightblue;
-    box-shadow: 0px 5px 30px rebeccapurple, -15px 15px 0.35rem grey, 3px -3px 1rem white;
+    border: 5px solid maroon;
+    box-shadow: 0px 5px 30px rgb(63, 59, 66), -15px 15px 0.35rem #420101, 3px -3px 1rem white;
 }
 
 ul{
