Still working on color pallete, but I need to go to sleep to get ready for work tomorrow.

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -7,8 +7,8 @@
     </div>
     <div class="card-part">
         <div class="personal-info">
-            <h1>Stephen Kirkland</h1>
-            <h4>Website Designer</h4>
+            <h1>Savannah Picnic by Luxy Nics</h1>
+            <h4>Kate Ward</h4>
             <p>912-536-7419</p>
             <p>skirkland.job@gmail.com</p>
         </div>
