--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,3 +1,6 @@
+$light-brown-border: #caa181;
+$maroon-border: #420101;
+
 .app-container {
     height: 98vh;
     width: 100%;
@@ -20,10 +23,10 @@
 
 .card-part {
     backdrop-filter: blur(6px);
-    border: 1px solid lavender;
+    border: 1px solid $light-brown-border;
     border-radius: 5px;
     margin: 40px 10px;
-    box-shadow: 0px 5px 30px rebeccapurple, -15px 15px 0.35rem grey, 3px -3px 1rem white;
+    box-shadow: 0px 5px 30px #420101, -15px 15px 0.35rem #290101, 3px -3px 1rem #52151c;
     animation: animate 6.5s ease-in-out infinite;
     text-align: center;
     font-family: Gilroy-Light;
@@ -53,7 +56,7 @@ img {
     width: 100%;
     border-radius: 50%;
     border: 5px solid maroon;
-    box-shadow: 0px 5px 30px rgb(63, 59, 66), -15px 15px 0.35rem #420101, 3px -3px 1rem white;
+    box-shadow: 0px 5px 30px rgb(63, 59, 66), -15px 15px 0.35rem $maroon-border, 3px -3px 1rem white;
 }
 
 ul{
