--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -7,10 +7,10 @@
     </div>
     <div class="card-part">
         <div class="personal-info">
-            <h1>Savannah Picnic by Luxy Nics</h1>
-            <h4>Kate Ward</h4>
-            <p>912-536-7419</p>
-            <p>skirkland.job@gmail.com</p>
+            <h1>{{businessName}}</h1>
+            <h4>{{personName}}</h4>
+            <p>{{telephone}}</p>
+            <p>{{email}}</p>
         </div>
     </div>
     
