--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -24,14 +24,11 @@
 
     <div class="social-media-full-container">
         <ul>
-            <li><a href="https://www.instagram.com/bigmoneykirk/" target="_blank"> <i class="fab fa-instagram"></i> </a>
+            <li><a href="https://www.instagram.com/savannahpicnic/" target="_blank"> <i class="fab fa-instagram"></i> </a>
             </li>
-            <li><a href="https://www.m.facebook.com/stevokirk/" target="_blank"> <i class="fab fa-facebook-f"></i> </a>
+            <li><a href="https://www.facebook.com/savannahpicnic/" target="_blank"> <i class="fab fa-facebook-f"></i> </a>
             </li>
-            <li><a href="https://www.linkedin.com/in/bigmoneykirk/" target="_blank"> <i class="fab fa-linkedin-in"></i>
-                </a></li>
-            <!-- <li><i class="fab fa-snapchat-ghost"></i></li> -->
-            <li><a href="https://twitter.com/StevoKirk" target="_blank"> <i class="fab fa-twitter"></i> </a></li>
+            <li><a href="https://savannahpicnic.com/" target="_blank"> <i class="fas fa-globe-americas"></i> </a></li>
         </ul>
     </div>
 
