--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,22 +5,26 @@
             <img [src]="imageService.profile" alt="That Boi Kirk">
         </div>
     </div>
-    <div class="card-part">
-        <div class="personal-info">
-            <h1>{{businessName}}</h1>
-            <h4>{{personName}}</h4>
-            <p>{{telephone}}</p>
-            <p>{{email}}</p>
+    <div class="card-container">
+        <div class="card-part">
+            <div class="personal-info">
+                <h1>{{businessName}}</h1>
+                <h4>{{personName}}</h4>
+                <p>{{telephone}}</p>
+                <p>{{email}}</p>
+            </div>
         </div>
     </div>
-    
+
     <div class="social-media-full-container">
         <ul>
-            <li><a href="https://www.instagram.com/bigmoneykirk/" target="_blank"> <i class="fab fa-instagram"></i> </a></li>
-            <li><a href="https://www.facebook.com/stevokirk/" target="_blank"> <i class="fab fa-facebook-f"></i> </a></li>
-            <li><a href="https://www.linkedin.com/in/bigmoneykirk/" target="_blank"> <i class="fab fa-linkedin-in"></i> </a></li>
-            <!-- <li><i class="fab fa-snapchat-ghost"></i></li> -->
-            <li><a href="https://twitter.com/StevoKirk" target="_blank"> <i class="fab fa-twitter"></i> </a></li>
+            <li><a href="https://www.instagram.com/savannahpicnic/" target="_blank"> <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li><a href="https://www.facebook.com/savannahpicnic/" target="_blank"> <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
+            <li><a href="https://savannahpicnic.com/" target="_blank"> <i class="fas fa-globe-americas"></i> </a></li>
         </ul>
     </div>
 
